small fixes: over margin, img overflow, button sizes, lastName include to submit

--- a/src/app/core/layouts/home-layout/components/article-cards/article-cards.component.scss
+++ b/src/app/core/layouts/home-layout/components/article-cards/article-cards.component.scss
@@ -72,6 +72,15 @@ h3 {
 	}
 }
 
+@media (max-width: 770px) {
+	.btn-green {
+		height: 50px;
+		font-size: 18px;
+		margin-bottom: 20px;
+	}
+}
+
+
 @media (max-width: 500px) {
 	.card {
 		width: 100%;
