--- a/src/app/core/layouts/home-layout/components/contact-us/contact-us.component.scss
+++ b/src/app/core/layouts/home-layout/components/contact-us/contact-us.component.scss
@@ -141,3 +141,10 @@
 		width: 370px;
 	}
 }
+
+
+@media (max-width: 400px) {
+	img {
+		width: 100%;
+	}
+}
